--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "maktabah-yarsi-astro",
+  "name": "maktabah-yarsi",
   "type": "module",
+  "author": "Muhammad Raihan Suryanom <muhammad.suryanom@btpn.com> (https://maktabah-yarsi-astro.vercel.app/)",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
+    "disable:toolbar": "astro preferences disable devToolbar",
     "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
+    "preview": "vercel deploy --prebuilt",
+    "vercel:prod": "vercel --prod",
+    "astro": "astro",
+    "check": "npx prettier . --check",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
-    "@astrojs/check": "^0.5.8",
     "@astrojs/react": "^3.6.0",
+    "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.7.1",
+    "astro": "4.11.0",
+    "class-variance-authority": "^0.7.0",
+    "react": "^18.3.1",
+    "react-select": "^5.8.0"
+  },
+  "devDependencies": {
+    "@astrojs/check": "^0.7.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "astro": "^4.10.3",
-    "react": "^18.3.1",
+    "prettier": "^3.3.2",
+    "prettier-plugin-astro": "^0.14.0",
     "react-dom": "^18.3.1",
-    "typescript": "^5.2.2"
-  }
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.2"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "packageManager": "yarn@4.3.0"
 }
