--- a/package.json
+++ b/package.json
@@ -7,31 +7,32 @@
     "dev": "astro dev",
     "disable:toolbar": "astro preferences disable devToolbar",
     "build": "astro check && astro build",
-    "preview": "vercel deploy --prebuilt",
+    "fresh:install": "rm -rf node_modules && rm yarn.lock && yarn",
+    "preview": "yarn build && vercel deploy --prebuilt",
     "vercel:prod": "vercel --prod",
     "astro": "astro",
     "check": "npx prettier . --check",
     "format": "npx prettier . --write"
   },
   "dependencies": {
-    "@astrojs/react": "^3.6.0",
-    "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vercel": "^7.7.1",
     "astro": "4.11.0",
-    "class-variance-authority": "^0.7.0",
-    "react": "^18.3.1",
-    "react-select": "^5.8.0"
+    "class-variance-authority": "0.7.0",
+    "react": "18.3.1",
+    "react-select": "5.8.0"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.7.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "prettier": "^3.3.2",
-    "prettier-plugin-astro": "^0.14.0",
-    "react-dom": "^18.3.1",
-    "tailwindcss": "^3.4.4",
-    "typescript": "^5.5.2"
+    "@astrojs/check": "0.7.0",
+    "@astrojs/react": "3.6.0",
+    "@astrojs/tailwind": "5.1.0",
+    "@astrojs/vercel": "7.7.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "prettier": "3.3.2",
+    "prettier-plugin-astro": "0.14.0",
+    "react-dom": "18.3.1",
+    "tailwindcss": "3.4.4",
+    "typescript": "5.5.2"
   },
   "engines": {
     "node": "18.x"
