feat: setup icons, tailwind and fonts

--- a/.prettierrc
+++ b/.prettierrc
@@ -19,7 +19,7 @@
   ],
   "overrides": [
     {
-      "files": "*.astro",
+      "files": ["*.astro", "*.svg"],
       "options": {
         "parser": "astro"
       }
