--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@fontsource/poppins": "5.0.14",
     "astro": "4.11.0",
+    "astro-icon": "1.1.0",
     "class-variance-authority": "0.7.0",
     "react": "18.3.1",
     "react-select": "5.8.0"
@@ -26,6 +28,7 @@
     "@astrojs/tailwind": "5.1.0",
     "@astrojs/vercel": "7.7.1",
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
+    "@iconify-json/lucide": "1.1.196",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "prettier": "3.3.2",
