--- a/package.json
+++ b/package.json
@@ -31,9 +31,13 @@
     "@iconify-json/lucide": "1.1.196",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@vite-pwa/assets-generator": "0.2.4",
+    "@vite-pwa/astro": "0.4.0",
     "prettier": "3.3.2",
     "prettier-plugin-astro": "0.14.0",
     "react-dom": "18.3.1",
+    "sharp": "0.33.4",
+    "sharp-ico": "0.1.5",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2"
   },
