--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,11 @@
   "extends": "astro/tsconfigs/strict",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsxImportSource": "react",
+    "types": [
+      "vite-plugin-pwa/info.d.ts",
+      "vite-plugin-pwa/pwa-assets",
+      "vite-plugin-pwa/client"
+    ]
   }
 }
