--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "astro-icon": "1.1.0",
     "class-variance-authority": "0.7.0",
     "react": "18.3.1",
-    "react-select": "5.8.0"
+    "react-select": "5.8.0",
+    "sharp": "0.33.4"
   },
   "devDependencies": {
     "@astrojs/check": "0.7.0",
@@ -37,7 +38,6 @@
     "prettier": "3.3.2",
     "prettier-plugin-astro": "0.14.0",
     "react-dom": "18.3.1",
-    "sharp": "0.33.4",
     "sharp-ico": "0.1.5",
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2"
