--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
     "tailwindcss": "3.4.4",
     "typescript": "5.5.2"
   },
+  "resolutions": {
+    "sharp": "0.32.6"
+  },
   "engines": {
     "node": "20.x"
   },
