--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
-    "@fontsource/poppins": "5.0.14",
     "astro": "4.11.0",
     "astro-icon": "1.1.0",
     "class-variance-authority": "0.7.0",
@@ -31,16 +30,19 @@
     "@astrojs/vercel": "7.7.1",
     "@ianvs/prettier-plugin-sort-imports": "4.2.1",
     "@iconify-json/lucide": "1.1.196",
+    "@tailwindcss/typography": "0.5.13",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vite-pwa/assets-generator": "0.2.4",
     "@vite-pwa/astro": "0.4.0",
+    "clsx": "2.1.1",
     "prettier": "3.3.2",
     "prettier-plugin-astro": "0.14.0",
     "react-dom": "18.3.1",
     "sharp-ico": "0.1.5",
+    "tailwind-merge": "2.3.0",
     "tailwindcss": "3.4.4",
-    "typescript": "5.5.2"
+    "typescript": "5.5.3"
   },
   "resolutions": {
     "sharp": "0.32.6"
