--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "2.1.1",
     "prettier": "3.3.2",
     "prettier-plugin-astro": "0.14.0",
+    "prettier-plugin-tailwindcss": "0.6.5",
     "react-dom": "18.3.1",
     "sharp-ico": "0.1.5",
     "tailwind-merge": "2.3.0",
