--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "astro": "4.11.0",
     "astro-icon": "1.1.0",
+    "astro-loading-indicator": "0.5.0",
     "class-variance-authority": "0.7.0",
     "react": "18.3.1",
     "react-select": "5.8.0",
