--- a/package.json
+++ b/package.json
@@ -8,28 +8,25 @@
     "disable:toolbar": "astro preferences disable devToolbar",
     "build": "astro check && astro build",
     "fresh:install": "rm -rf node_modules && rm yarn.lock && yarn",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/favicon.svg",
-    "preview": "yarn build && vercel deploy --prebuilt",
-    "vercel:prod": "vercel --prod",
+    "preview": "yarn build && HOST=0.0.0.0 PORT=4321 node ./dist/server/entry.mjs",
     "astro": "astro",
     "check": "npx prettier . --check",
     "format": "npx prettier . --write"
   },
   "dependencies": {
-    "astro": "4.11.0",
+    "@astrojs/node": "8.3.3",
+    "astro": "4.14.2",
     "astro-icon": "1.1.0",
-    "astro-loading-indicator": "0.5.0",
     "class-variance-authority": "0.7.0",
     "react": "18.3.1",
     "react-select": "5.8.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
-    "@astrojs/check": "0.7.0",
-    "@astrojs/react": "3.6.0",
+    "@astrojs/check": "0.9.2",
+    "@astrojs/react": "3.6.2",
     "@astrojs/tailwind": "5.1.0",
-    "@astrojs/vercel": "7.7.1",
-    "@ianvs/prettier-plugin-sort-imports": "4.2.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@iconify-json/lucide": "1.1.196",
     "@tailwindcss/typography": "0.5.13",
     "@types/react": "18.3.3",
