feat(on-demand-isr):[WIP] enabled isr with vercel integration

--- a/package.json
+++ b/package.json
@@ -8,27 +8,29 @@
     "disable:toolbar": "astro preferences disable devToolbar",
     "build": "astro check && astro build",
     "fresh:install": "rm -rf node_modules && rm yarn.lock && yarn",
-    "preview": "yarn build && HOST=0.0.0.0 PORT=4321 node ./dist/server/entry.mjs",
+    "preview": "yarn build && vercel deploy --prebuilt",
     "astro": "astro",
     "check": "npx prettier . --check",
     "format": "npx prettier . --write"
   },
   "dependencies": {
-    "@astrojs/node": "8.3.3",
-    "astro": "4.14.2",
-    "astro-icon": "1.1.0",
+    "@astrojs/vercel": "7.8.0",
+    "astro": "4.14.5",
+    "astro-icon": "1.1.1",
     "class-variance-authority": "0.7.0",
+    "jsonwebtoken": "9.0.2",
     "react": "18.3.1",
     "react-select": "5.8.0",
     "sharp": "0.32.6"
   },
   "devDependencies": {
-    "@astrojs/check": "0.9.2",
+    "@astrojs/check": "0.9.3",
     "@astrojs/react": "3.6.2",
     "@astrojs/tailwind": "5.1.0",
     "@ianvs/prettier-plugin-sort-imports": "4.3.1",
     "@iconify-json/lucide": "1.1.196",
     "@tailwindcss/typography": "0.5.13",
+    "@types/jsonwebtoken": "9",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "clsx": "2.1.1",
